tests/it/snapshots/it__remote_git__clone_private_repo_with_no_auth.snap
---
source: tests/it/remote_git.rs
expression: "integration.clone_reference(&reference).expect_err(\"Could not read from remote repository\")"
info: cloning private repo with bad auth
---
run external command
├╴at {source location}
│
╰─▶ git execution failed
    ├╴at {source location}
    ╰╴context: running git command ["-c", "credential.helper=", "clone", "--filter=blob:none", "--branch", "main", "http://github.com/github/doesnotexist.git", "{tmpdir}"], status was: exit status: 128, stderr: Cloning into '{tmpdir}'...
      fatal: could not read Username for 'https://github.com': terminal prompts disabled
