tests/it/snapshots/it__remote_git__get_references_that_need_scanning_on_private_repo_with_no_auth.snap
---
source: tests/it/remote_git.rs
expression: "git::repository::Repository::get_references_that_need_scanning(integration).expect_err(\"no results returned from get_references_that_need_scanning on a private repo\")"
info: cloning private repo with bad auth
---
running git command
├╴at {source location}
╰╴context: running git command ["ls-remote", "--quiet"], status was: exit status: 128, stderr: {permission denied}.
  fatal: Could not read from remote repository.
  
  Please make sure you have the correct access rights
  and the repository exists.
