tests/it/snapshots/it__remote_git__references_on_private_repo_with_no_auth.snap
---
source: tests/it/remote_git.rs
expression: err
info: references on private repo with bad auth
---
run external command
├╴at {source location}
│
├─▶ IO layer error
│   ╰╴at {source location}
│
╰─▶ run git command: 'git -c credential.helper= ls-remote --quiet'
    env: ["GCM_INTERACTIVE=never", "GIT_ASKPASS=<REMOVED>", "GIT_TERMINAL_PROMPT=0"]
    status: 128
    stdout: ''
    stderr: 'fatal: could not read Username for 'https://github.com': terminal prompts disabled'
    ╰╴at {source location}
